Add main navigation, hero, admin, and category components
Introduces new UI components for navigation, hero section, admin icon, category showcase, and category posts page. Adds supporting hooks, types, and utility files. Updates Next.js app and document files, and adds admin dashboard and section pages. Also updates package.json and tsconfig.json for new dependencies and configuration.

--- a/antilaha/package.json
+++ b/antilaha/package.json
@@ -46,6 +46,9 @@
     "@react-email/components": "^0.0.33",
     "@react-email/render": "^1.0.5",
     "@react-pdf/renderer": "^4.3.0",
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
+    "@react-three/rapier": "^2.1.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@shadcn/ui": "^0.0.4",
     "@tensorflow-models/mobilenet": "^2.1.1",
@@ -71,10 +74,13 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.18.2",
     "gemini-api": "^2.0.4",
+    "gl-matrix": "^3.4.3",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
+    "meshline": "github:pmndrs/meshline",
     "nanoid": "^5.1.2",
     "next": "^15.1.7",
     "next-sitemap": "^4.2.3",
@@ -109,6 +115,7 @@
     "swiper": "^11.2.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
