--- a/antilaha/tsconfig.json
+++ b/antilaha/tsconfig.json
@@ -9,6 +9,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "typeRoots": ["./node_modules/@types", "./types"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
